--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ pylint==2.15.4
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.21.0
-pywin32==304
+pywin32
 pyzmq==24.0.1
 six==1.16.0
 SQLAlchemy==1.4.41
