Completed the CRUD

--- a/.env-local
+++ b/.env-local
@@ -3,8 +3,8 @@ SQLALCHEMY_TRACK_MODIFICATIONS=False
 
 SQLSERVER.DRIVER={ODBC Driver 18 for SQL Server}
 SQLSERVER.HOST=DESKTOP-C8NETJI
-SQLSERVER.USER=
-SQLSERVER.PASSWD=
+SQLSERVER.USER=intake_user
+SQLSERVER.PASSWD=Password1
 SQLSERVER.DB=PatientIntake
 
 SWAGGER_URL=/swagger
